--- a/public/assets/dashboard/css/style.css
+++ b/public/assets/dashboard/css/style.css
@@ -21083,7 +21083,7 @@ Fixing Order => Base + Typography >> General Layout + Grid >> Page Layout + Comp
 .photo-content {
   position: relative; }
   .photo-content .cover-photo {
-    background: url(../images/profile/cover.jpg);
+    background: url('../images/ziliring.png');
     background-size: cover;
     background-position: center;
     min-height: 250px;
