Add downliners info to upliner contribution details

--- a/public/assets/dashboard/css/style.css
+++ b/public/assets/dashboard/css/style.css
@@ -175,7 +175,7 @@ Fixing Order => Base + Typography >> General Layout + Grid >> Page Layout + Comp
   --white: #fff;
   --gray: #6c757d;
   --gray-dark: #343a40;
-  --primary: #6418C3;
+  --primary: #6418c3;
   --secondary: #DC3CCC;
   --success: #2BC155;
   --info: #2B98D6;
